# heightcraft

./: .gitignore  404.html  README.md  index.html  main.py  opensearch.xml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: run-tests.yml
assets/css/: styles.96bdc003.css  styles.ab2d1275.css
assets/js/: 08c24f4a.61a3c13e.js  0939c340.e5d94f87.js  0e384e19.00d464d7.js  0e384e19.2acd9a53.js  159d9d6e.1f46eb0a.js  159d9d6e.f98c89e6.js  18c41134.4e1825dc.js  1a4e3797.3c5944e8.js  1a4e3797.d60a69c1.js  1df93b7f.771eddc7.js  1e4232ab.32bdb065.js  1f391b9e.e7b0369b.js  393be207.31007899.js  3b8c55ea.0d379f56.js  3b8c55ea.343b78c0.js  3fbf7295.e5bf7fee.js  4ff5ad74.16e362c2.js  4ff5ad74.ad19b153.js  533a09ca.2a107684.js  5c0f54eb.0f6269f3.js  5c0f54eb.9b5ed4ed.js  5c868d36.6ee757b5.js  5f5dec6b.b5a72430.js  5f5dec6b.d6c2bb8f.js  7639.82513d7a.js  814f3328.aa890ae8.js  822bd8ab.5382cee9.js  85458528.c4f657ed.js  8913.dc88b2d5.js  (+27 more)
blog/: atom.xml  index.html  rss.xml
docs/: docusaurus.config.ts  package-lock.json
legacy/: main.py
lib/: height_map_generator.py  large_model_handler.py  model_loader.py  point_sampler.py  resolution_calculator.py  resource_manager.py  upscaler.py
markdown-page/: index.html
pl/: 404.html  index.html  opensearch.xml  sitemap.xml
pt-PT/: 404.html  index.html  opensearch.xml  sitemap.xml
search/: index.html
tests/: test_edge_cases.py  test_height_map_generator.py  test_large_model_handler.py  test_model_loader.py  test_point_sampler.py  test_resolution_calculator.py  test_resource_manager.py  test_upscaler.py
(+252 files in other folders)
