[project]
name = "heightcraft"
version = "0.1.0"
description = "A powerful and flexible height map generator"
authors = []
dependencies = [
    "trimesh>=4.0.0",
    "numpy>=1.19.5",
    "matplotlib>=3.3.4",
    "torch",
    "scipy",
    "tensorflow>=2.6.0",
    "psutil>=5.9.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.dependency-groups]
dev = { dependencies = ["pytest", "ruff"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py38" 