[project]
name = "heightcraft"
version = "0.1.0"
description = "A powerful and flexible height map generator"
authors = []
dependencies = [
    "trimesh>=4.0.0",
    "numpy>=1.19.5",
    "matplotlib>=3.3.4",
    "torch",
    "scipy",
    "psutil>=5.9.0",
    "Pillow>=9.0.0",
    "laspy[lazrs]>=2.0.0",
    "tifffile>=2023.0.0",
]
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py38" 